[package]
name = "kime"
version = "0.0.1"
authors = ["Leonora Tindall <nora@nora.codes>", "Ilaï Deutel"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "A kibi-based modal UTF-8 editor with syntax higlighting, search and more."
repository = "https://github.com/NoraCodes/kime"
readme = "README.md"
keywords = ["editor", "terminal", "text-editor"]
categories = ["text-editors", "development-tools"]
exclude = [".gitignore", "rustfmt.toml", "syntax"]

[dependencies]
libc = "0.2"
nix = "0.17"
signal-hook = "0.1"
unicode-width = "0.1"

[dev-dependencies]
tokei = "10"

[badges]
travis-ci = { repository = "NoraCodes/kime", branch = "master" }
maintenance = { status = "actively-developed" }
